# WordVec

./: .gitignore  CMakeLists.txt  README.md
data/: text8_line_1  text8_line_2  text8_line_3  text8_line_4
scripts/: example.sh  run.sh
src/: distance.cc  main.cc  main.cpp  main_test.cc  options.cc  options.h  utils.cc  utils.h  utils.hpp  vocabulary.cc  vocabulary.h  vocabulary.hpp  vocabulary_test.cc  word2vec.c  wordvec.cc  wordvec.cpp  wordvec.h  wordvec.hpp
